2003-11-22  Duncan Mak  <duncan@ximian.com>

	* Matrix.cs: Rewrote to use GDI+ implementation, doing all the
	math in unmanaged code instead of doing it in C#.

2003-11-04  Miguel de Icaza  <miguel@ximian.com>

	* GraphicsPathIterator.cs: Do not make this protected.

2003-11-13  Andreas Nahr <ClassDevelopment@A-SoftTech.com>

	* QualityMode.cs: Fixed typo
	* InterpolationMode.cs: Fixed typo
	* RegionData.cs: Fixed signatures, partially implemented
	* PathGradientBrush.cs: Fixed signatures
	* PathData.cs: Fixed signature, implemented
	* LinearGradientBrush.cs: Added missing MonoTODOs, fixed typo
	* GraphicsContainer.cs: Added private constructor
	* CustomLineCap.cs: Fixed typos, fixed inheritance, removed unneeded member

2003-11-11 Ben Maurer  <bmaurer@users.sourceforge.net>

	* ColorBlend.cs (Positions): another one.

2003-11-11 Ben Maurer  <bmaurer@users.sourceforge.net>

	* Blend.cs (Positions): recursion in prop.

2003-10-24  Miguel de Icaza  <miguel@ximian.com>

	* GraphicsPath.cs: Stub some more.

2003-10-12 Alexandre Pigolkine <pigolkine@gmx.de>
	* GraphicsState.cs		internal member added

2003-06-26 Alexandre Pigolkine <pigolkine@gmx.de>
	* GraphicsState.cs		internal member added
	
2003-04-26 Alexandre Pigolkine <pigolkine@gmx.de>
	* LinearGradientBrush.cs  some implementation added

2003-3-15 DennisHayes <dennish@raytek.com>
	* Stubbed and somewhat implmented

	* CustomLineCap.cs
	* GraphicsContainer.cs
	* GraphicsPath.cs
	* GraphicsPathIterator.cs
	* GraphicsState.cs
	* HatchBrush.cs
	* LinearGradientBrush.cs

2003-3-5 DennisHayes <dennish@raytek.com>
	* Added values for enums
	* Stubbed and somewhat implmented Blend, ColorBlend, CustomLineCap


2003-3-2  DennisHayes <dennish@raytek.com>

	* Created changelog
	* updated copyrights to 2002/3
	* changed namespace from System.Drawing, System.Drawing.Drawing2d to System.Drawing.Drawing2D
	* cosmetic improvments

2002-10-13  DennisHayes <dennish@raytek.com>
	* Changed namespace from *2d to *2D