@@ -1,3 +1,8 @@
+2003-12-04  Gonzalo Paniagua Javier <gonzalo@ximian.com>
+
+	* Blend.cs: fix array sizes in the constructors. Closes bug #51564.
+	System.Web moves in mysterious ways.
+
 2003-11-22  Duncan Mak  <duncan@ximian.com>
 
 	* Matrix.cs: Rewrote to use GDI+ implementation, doing all the
